# assertc

./: CMakeLists.txt  LICENSE  Makefile  README.md  assert.c  assert.h  index.html  main.c  params.json  runner.c  runner.h  spec_reporter.c  spec_reporter.h
docs/: Makefile  conf.py  index.md  make.bat
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.txt
examples/: above_assertions.c  array.c  below_assertions.c  simple_assertions.c
src/: assert.c  assertc.c  assertc.h  collection.c  collection.h  runner.c  runner.h  spec_reporter.c  spec_reporter.h
src/reporters/: spec.c
tests/: below_assertions.c  main.c
